Fixed "Launcher" block's padding on mobile device

--- a/frontend/scss/molecules/_action.scss
+++ b/frontend/scss/molecules/_action.scss
@@ -8,6 +8,9 @@
       margin-left: auto;
       margin-right: auto;
       padding-bottom: 40px;
+      .section-no-padding &:not(.no-image){
+        padding-bottom: 0;
+      }
     }
 
     h2 {
